--- a/email.html
+++ b/email.html
@@ -38,7 +38,7 @@
                   <tr>
                     <td align="left">
                       <a href="https://www.chitai-gorod.ru" target="_blank">
-              <img src="https://cdn1.savepice.ru/uploads/2017/9/21/8341869f4ebd8e1e96bc03ab1f1fee2a-full.png" alt="logo" border="0" style="width: auto; display: block;">
+              <img src="https://cdn1.savepice.ru/uploads/2017/9/25/b3571d8b74cc35fb34c5715b4804defc-full.jpg" alt="logo" border="0" style="width: auto; display: block;">
             </a>
                     </td>
                     <td align="right" valign="bottom">
@@ -81,7 +81,7 @@
                       <table border="0" cellpadding="0" cellspacing="0" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
                           <td>
-                            <img src="https://cdn1.savepice.ru/uploads/2017/9/21/55aa778802f9e5b93388b30447ffc18d-full.png" alt="" border="0" style="align: top; display: block; width: auto;">
+                            <img src="https://cdn1.savepice.ru/uploads/2017/9/25/144426a18b1f50c8e61e26a3b7af57ec-full.jpg" alt="" border="0" style="align: top; display: block; width: auto;">
                           </td>
                         </tr>
                         <tr>
@@ -93,7 +93,7 @@
                         </tr>
                         <tr>
                           <td style="font-family:Arial, Helvetica, sans-serif; font-size: 16px; vertical-align: top; background-color: #3995e0; border-radius: 4px; text-align: center;" bgcolor="#3995e0">
-                            <a href="#" target="_blank" style="background-color: #3995e0; border-radius: 4px; color: #ffffff; display: inline-block; box-sizing: border-box; font-family:Arial, Helvetica, sans-serif; font-size: 16px; font-weight: normal; padding: 8px 48px; margin: 0; text-align: center; width: 165px; cursor: pointer;">Заказать</a>
+                            <a href="#" target="_blank" style="background-color: #3995e0; border-radius: 4px; color: #ffffff; display: inline-block; box-sizing: border-box; font-family:Arial, Helvetica, sans-serif; font-size: 16px; font-weight: normal; line-height: 26px; margin: 0; text-align: center; width: 165px; cursor: pointer;">Заказать</a>
                           </td>
                         </tr>
                       </table>
